--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.0-333.0.dev
+  sdk: ">=3.8.1 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,6 +37,9 @@ dependencies:
   google_fonts: ^6.2.1
   get: ^4.7.2
   pin_code_fields: ^8.0.1
+  firebase_core: ^3.15.2
+  firebase_auth: ^5.7.0
+  cloud_firestore: ^5.6.12
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +66,7 @@ flutter:
 
   assets:
      - assets/images/
-     - assets/icons/
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
