--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.20.2
   image_picker: ^1.1.2
   device_preview: ^1.3.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
