--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^1.1.2
   device_preview: ^1.3.1
   shared_preferences: ^2.5.3
+  firebase_storage: ^12.4.10
 
 dev_dependencies:
   flutter_test:
