--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,8 +75,10 @@ flutter:
     - assets/images/CD_report.png
     - assets/images/Expense.png
     - assets/images/add_category.png
+    - assets/images/cash_earning.png
     - assets/images/earnings.jpeg
     - assets/images/intake.png
+    - assets/images/online_earning.png
     - assets/images/report.png
     - assets/images/return_report.png
     - assets/images/sales1111.png
