--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,10 +23,10 @@ android {
         applicationId = "com.xavics.salesapp"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 23
         targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        versionCode = 1
+        versionName = '1.0.0'
     }
     buildTypes {
         release {
