--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   device_preview: ^1.3.1
   shared_preferences: ^2.5.3
   firebase_storage: ^13.0.0
+  blue_thermal_printer: ^1.2.3
 
 dev_dependencies:
   flutter_test:
