--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: salesapp
+name: shoporbit
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -45,10 +45,16 @@ dependencies:
   device_preview: ^1.3.1
   shared_preferences: ^2.5.3
   firebase_storage: ^13.0.0
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -70,6 +76,7 @@ flutter:
 
 
   assets:
+    - assets/icon/app_icon.png
     - assets/images/
     - assets/images/Apple.jpg
     - assets/images/CD_report.png
