--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,6 +24,10 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutter.versionCode
         versionName flutter.versionName
+
+        manifestPlaceholders = [
+                firebaseAuthSignInCertificateHash: "YOUR_SHA256_CERT_HASH"
+        ]
     }
 
     buildTypes {
@@ -33,6 +37,10 @@ android {
             signingConfig = signingConfigs.getByName("debug")
         }
     }
+}
+dependencies {
+    implementation 'com.google.android.play:integrity:1.2.0'
+    implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
 }
 flutter {
     source = "../.."
