--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,41 +7,65 @@ plugins {
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id("dev.flutter.flutter-gradle-plugin")
 }
+
+// Load keystore.properties
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file("key.properties")
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 android {
     namespace = "com.xavics.salesapp"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = "27.0.12077973"
+
+    // ❌ Remove ndkVersion unless you really need NDK
+    // ndkVersion = "27.0.12077973"
+
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_11
         targetCompatibility = JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_11.toString()
+        jvmTarget = "11"
     }
+
     defaultConfig {
         applicationId "com.xavics.salesapp"
-        minSdkVersion 23 // ⬅ Change this line
+        // ✅ safer: inherit from Flutter unless a plugin forces min 23
+        minSdkVersion 23
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutter.versionCode
         versionName flutter.versionName
 
         manifestPlaceholders = [
-                firebaseAuthSignInCertificateHash: "YOUR_SHA256_CERT_HASH"
+                firebaseAuthSignInCertificateHash: "27:df:5c:5c:cc:7a:fc:93:3e:c2:8c:a3:4f:02:b7:2a:ac:8c:bd:ef:15:11:41:16:5b:8a:fe:93:ee:e4:ec:d5"
         ]
+    }
+
+    signingConfigs {
+        release {
+            keyAlias keystoreProperties["keyAlias"]
+            keyPassword keystoreProperties["keyPassword"]
+            storeFile keystoreProperties["storeFile"] ? file(keystoreProperties["storeFile"]) : null
+            storePassword keystoreProperties["storePassword"]
+        }
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so flutter run --release works.
-            signingConfig = signingConfigs.getByName("debug")
+            signingConfig signingConfigs.release
+            shrinkResources false
+            minifyEnabled false
         }
     }
 }
+
 dependencies {
     implementation 'com.google.android.play:integrity:1.2.0'
     implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
 }
+
 flutter {
     source = "../.."
 }
