--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_storage: ^13.0.0
   flutter_launcher_icons: ^0.14.4
   esc_pos_printer: ^4.1.0
+  firebase_app_check: ^0.4.0+1
 
 dependency_overrides:
   image: ^3.0.2
